# operational-ai-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: graph.py  intent.py  tools.py
app/api/: routes_ask.py  routes_eval.py  routes_feedback.py  routes_health.py
app/core/: config.py  logging.py  middleware.py  telemetry.py
app/evaluation/: datasets.py  eval_runner.py  metrics.py
app/ingestion/: chunking.py  ingest_documents.py  ingest_tickets.py  ingest_timeseries.py  run_all.py
app/models/: api.py  evaluation.py  machine.py  sensor.py  ticket.py
app/rag/: answer_generator.py  grounding.py  prompts.py  retriever.py
app/storage/: database.py  feedback_store.py  vector_store.py
docs/: STATUS.md  architecture.md  plan.md
eval/: golden_questions.jsonl
ops/dashboards/: copilot.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/prometheus/: alerts.yml  prometheus.yml
scripts/: check_metrics.py  debug_retrieval.py  demo_query.py  promote_feedback.py
tests/: test_agent.py  test_ask.py  test_eval_metrics.py  test_feedback.py  test_health.py
