[project]
name = "operational-ai-copilot"
version = "0.1.0"
description = "Production-grade operational AI copilot with RAG, agentic workflows, evaluation, and observability"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-dateutil",
]
eval = [
    "ragas>=0.1",
    "datasets>=2.19",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
data = [
    "faker>=25.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
